[metadata]
name = mongodriver
version = 1.2.3
description = Object-oriented interactions with MongoDB
description-file = README.md
author = Jake Strouse
author_email = jstrouse@meh.llc
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pymongo==3.12.0
    pymongo[srv]
package_dir=
    =src